--- a/src/Styles/DownloadButton.css
+++ b/src/Styles/DownloadButton.css
@@ -3,9 +3,6 @@ a {
     font-weight: 800;
     font-size: 2em;
     padding-right: 1em;
-}
-
-a {
     color: aliceblue;
     text-decoration: none;
     -webkit-text-stroke-width: 2px;
