--- a/src/Styles/Works.css
+++ b/src/Styles/Works.css
@@ -66,7 +66,7 @@
   content: '';
   height: 6px;
   width: 40%;
-  background: linear-gradient(0.25turn, #7373db, rgb(25, 25, 25));
+  background: linear-gradient(0.25turn, rgb(44, 44, 165), rgb(63, 72, 204));
   display: block;
   position: relative;
   top: 50%;
@@ -76,7 +76,7 @@
   content: '';
   height: 6px;
   width: 40%;
-  background: linear-gradient(0.25turn, rgb(25, 25, 25), #7373db);
+  background: linear-gradient(0.25turn, rgb(63, 72, 204), rgb(44, 44, 165));
   position: relative;
   top: 50%;
   left: 0;
